<resources>
    <string name="app_name">ApplicationSQLite</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_register">Nuevo Registro</string>
    <string name="action_register">Register</string>

    <string name="agregar_registro">Nuevo Registro</string>
    <string name="borrar_registro">Borrar</string>
    <string name="buscar_registro">Buscar</string>
    <string name="todos_registro">Todos</string>
    <string name="nombre">Nombre:</string>
    <string name="dni">DNI:</string>

    <string name="title_activity_delete">deleteActivity</string>
</resources>
