<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:id="@+id/main_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_account_search"
            android:text="@string/buscar_registro"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:background="@color/link_text_material_light"
            android:textColor="@color/background_material_light"/>


        <Button
            android:id="@+id/main_minus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_account_minus"
            android:text="@string/borrar_registro"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:background="@color/material_blue_grey_800"
            android:textColor="@color/background_material_light"/>

        <Button
            android:id="@+id/main_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_account_multiple"
            android:text="@string/todos_registro"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:background="@color/link_text_material_light"
            android:textColor="@color/background_material_light"/>



    </LinearLayout>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:id="@+id/main_list"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.92" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical" >
        <Button
            android:id="@+id/main_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_account_plus"
            android:text="@string/agregar_registro"
            android:paddingLeft="6dp"
            android:background="@color/material_deep_teal_500"
            android:textColor="@color/background_material_light"/>
        </LinearLayout>

</LinearLayout>
